--- a/careers.html
+++ b/careers.html
@@ -112,7 +112,7 @@
                 <div class="job-listings">
                     <div class="job-card">
                         <div class="job-header">
-                            <h3>Nhân Viên Phục Vụ</h3>
+                            <h3>Phục Vụ</h3>
                             <span class="job-type">Full-time</span>
                         </div>
                         <div class="job-details">
@@ -136,7 +136,7 @@
                     
                     <div class="job-card">
                         <div class="job-header">
-                            <h3>Nhân Viên Tư Vấn Du Lịch</h3>
+                            <h3>Tư Vấn Viên Du Lịch</h3>
                             <span class="job-type">Full-time</span>
                         </div>
                         <div class="job-details">
@@ -160,7 +160,7 @@
                     
                     <div class="job-card">
                         <div class="job-header">
-                            <h3>Đầu Bếp Bánh</h3>
+                            <h3>Nhân Viên F&B</h3>
                             <span class="job-type">Full-time</span>
                         </div>
                         <div class="job-details">
@@ -168,7 +168,7 @@
                             <p><i class="fas fa-money-bill-wave"></i> 12-18 triệu/tháng</p>
                         </div>
                         <div class="job-description">
-                            <p>Chúng tôi đang tìm kiếm đầu bếp bánh có kinh nghiệm để tham gia vào đội ngũ sản xuất bánh mì và các loại bánh khác. Bạn sẽ được làm việc trong môi trường sáng tạo và phát triển các công thức mới.</p>
+                            <p>Chúng tôi đang tìm kiếm nhân viên có kinh nghiệm để tham gia vào đội ngũ phục vụ F&B. Bạn sẽ được làm việc trong môi trường sáng tạo và phát triển các công thức mới.</p>
                         </div>
                         <div class="job-requirements">
                             <h4>Yêu cầu:</h4>
@@ -197,7 +197,7 @@
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="full-name">Họ và tên <span class="required">*</span></label>
-                                <input type="text" id="full-name" name="full-name" placeholder="Nguyễn Văn A" required aria-required="true" aria-describedby="name-error">
+                                <input type="text" id="full-name" name="full-name" placeholder="Ngọc Bích" required aria-required="true" aria-describedby="name-error">
                                 <div id="name-error" class="error-message" aria-live="polite"></div>
                             </div>
                             <div class="form-group">
@@ -273,7 +273,7 @@
                                 <img src="assets/images/employee1.svg" alt="Nhân viên 1">
                             </div>
                             <div class="author-info">
-                                <h4>Nguyễn Văn A</h4>
+                                <h4>Ngọc Bích</h4>
                                 <p>Nhân viên tư vấn du lịch - 2 năm</p>
                             </div>
                         </div>
@@ -350,6 +350,6 @@
         <i class="fas fa-arrow-up"></i>
     </div>
 
-    <script src="main.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
