--- a/services.html
+++ b/services.html
@@ -55,7 +55,7 @@
     <!-- Hero Section -->
     <section class="hero" style="height: 60vh; margin-top: 80px;">
         <div class="hero-content">
-            <h1>Dịch Vụ Của Chúng Tôi</h1>
+            <h1>Dịch Vụ</h1>
             <p>Khám phá các dịch vụ đa dạng và chất lượng cao của Nhiên Việt Go</p>
         </div>
     </section>
