--- a/careers.html
+++ b/careers.html
@@ -173,8 +173,8 @@
                         <div class="job-requirements">
                             <h4>Yêu cầu:</h4>
                             <ul>
-                                <li>Có ít nhất 2 năm kinh nghiệm làm bánh</li>
-                                <li>Có kiến thức về các loại bánh mì và bánh ngọt</li>
+                                <li>Có ít nhất 2 năm kinh nghiệm</li>
+                                <li>Có kiến thức về các loại bánh mì và pha chế</li>
                                 <li>Có khả năng làm việc độc lập và theo nhóm</li>
                                 <li>Sáng tạo và đam mê với nghề</li>
                             </ul>
@@ -197,7 +197,7 @@
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="full-name">Họ và tên <span class="required">*</span></label>
-                                <input type="text" id="full-name" name="full-name" placeholder="Ngọc Bích" required aria-required="true" aria-describedby="name-error">
+                                <input type="text" id="full-name" name="full-name" placeholder="Nguyễn Văn A" required aria-required="true" aria-describedby="name-error">
                                 <div id="name-error" class="error-message" aria-live="polite"></div>
                             </div>
                             <div class="form-group">
@@ -217,9 +217,9 @@
                                 <div class="select-container">
                                     <select id="position" name="position" required aria-required="true" aria-describedby="position-error">
                                         <option value="">Chọn vị trí</option>
-                                        <option value="server">Nhân Viên Phục Vụ</option>
-                                        <option value="travel-consultant">Nhân Viên Tư Vấn Du Lịch</option>
-                                        <option value="baker">Đầu Bếp Bánh</option>
+                                        <option value="server">Phục Vụ</option>
+                                        <option value="travel-consultant">Tư Vấn Viên Du Lịch</option>
+                                        <option value="baker">Nhân Viên F&B</option>
                                         <option value="other">Vị trí khác</option>
                                     </select>
                                     <div id="position-error" class="error-message" aria-live="polite"></div>
@@ -242,6 +242,7 @@
                                     <div id="resume-error" class="error-message" aria-live="polite"></div>
                                 </div>
                                 <small>Chấp nhận file PDF, DOC, DOCX (tối đa 5MB)</small>
+                                <strong>Vui lòng đọc kỹ hướng dẫn ứng tuyển trước khi gửi đơn!</strong>
                             </div>
                             <div class="form-group">
                                 <label for="cover-letter">Thư ngỏ</label>
@@ -249,7 +250,14 @@
                             </div>
                         </div>
                         <div class="form-row">
-                            <button type="submit" class="btn btn-primary" aria-label="Gửi đơn ứng tuyển"><i class="fas fa-paper-plane"></i> Gửi đơn ứng tuyển</button>
+                            <div class="form-buttons">
+                                <button type="submit" class="btn btn-primary" aria-label="Gửi đơn ứng tuyển">
+                                    <i class="fas fa-paper-plane"></i> Gửi đơn ứng tuyển
+                                </button>
+                                <a href="huong-dan-ung-tuyen.html" class="btn btn-secondary" aria-label="Xem hướng dẫn ứng tuyển" target="_blank">
+                                    <i class="fas fa-question-circle"></i> Hướng dẫn ứng tuyển
+                                </a>
+                            </div>
                         </div>
                     </form>
                 </div>
@@ -340,7 +348,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Nhiên Việt Go. Tất cả quyền được bảo lưu.</p>
+                <p>&copy; 2025 Nhiên Việt Go. Tất cả quyền được bảo lưu.</p>
             </div>
         </div>
     </footer>
