--- a/careers.html
+++ b/careers.html
@@ -295,7 +295,7 @@
                                 <img src="assets/images/employee2.svg" alt="Nhân viên 2">
                             </div>
                             <div class="author-info">
-                                <h4>Trần Thị B</h4>
+                                <h4>Tính Nguyễn</h4>
                                 <p>Quản lý cửa hàng - 3 năm</p>
                             </div>
                         </div>
@@ -309,8 +309,8 @@
                                 <img src="assets/images/employee3.svg" alt="Nhân viên 3">
                             </div>
                             <div class="author-info">
-                                <h4>Lê Văn C</h4>
-                                <p>Đầu bếp - 1.5 năm</p>
+                                <h4>Lân & Vỹ</h4>
+                                <p>F&B - 1.5 năm</p>
                             </div>
                         </div>
                     </div>
