--- a/huong-dan-ung-tuyen.html
+++ b/huong-dan-ung-tuyen.html
@@ -360,7 +360,7 @@
                         <ul>
                             <li>Nếu ứng viên không nhận được email xác nhận, vui lòng kiểm tra thư rác hoặc spam</li>
                             <li>Sau 1 tiếng chưa nhận được mail hoặc mã tham chiếu, vui lòng liên hệ: nhienvietinspired@gmail.com hoặc Zalo: 0812538523</li>
-                            <li>Vui lòng bình tĩnh không spam gửi đơn, chúng tôi sẽ liên hệ lại sớm nhất có thể, chân thành cảm ơn ứng viên!</li>
+                            <li>Vui lòng bình tĩnh không spam gửi đơn, chúng tôi sẽ liên hệ lại sớm nhất có thể, trân thành cảm ơn ứng viên!</li>
                         </ul>
                     </div>
                 </div>
