--- a/careers.html
+++ b/careers.html
@@ -137,7 +137,7 @@
                     
                     <div class="job-card">
                         <div class="job-header">
-                            <h3>Tư Vấn Viên Du Lịch</h3>
+                            <h3>Tư Vấn Viên</h3>
                             <span class="job-type">Full-time</span>
                         </div>
                         <div class="job-details">
