--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
                 <img src="assets/images/LOGO.png" alt="NVI Logo">
                 <div class="logo-text">
                     <h1>Nhiên Việt Go</h1>
-                    <p>F&B - Flight Ticket</p>
+                    <p>F&B - Travel Services</p>
                 </div>
             </div>
             <nav>
@@ -288,7 +288,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Nhiên Việt Go. Tất cả quyền được bảo lưu.</p>
+                <p>&copy; 2025 NVI. Tất cả quyền được bảo lưu.</p>
             </div>
         </div>
     </footer>
