--- a/services.html
+++ b/services.html
@@ -342,7 +342,8 @@
                             <li>Đặt vé online 24/7</li>
                             <li>Thay đổi lịch bay</li>
                             <li>Hỗ trợ check-in</li>
-                            <li>Dịch vụ đưa đón sân bay</li>
+                            <li>Dịch vụ lấy ghế</li>
+                            <li>Dịch vụ phòng chờ thương gia</li>
                         </ul>
                     </div>
                 </div>
