--- a/careers.html
+++ b/careers.html
@@ -296,7 +296,7 @@
                                 <img src="assets/images/employee2.svg" alt="Nhân viên 2">
                             </div>
                             <div class="author-info">
-                                <h4>Tính Nguyễn</h4>
+                                <h4>Phướng & Lân</h4>
                                 <p>Quản lý cửa hàng - 3 năm</p>
                             </div>
                         </div>
@@ -310,7 +310,7 @@
                                 <img src="assets/images/employee3.svg" alt="Nhân viên 3">
                             </div>
                             <div class="author-info">
-                                <h4>Lân & Vỹ</h4>
+                                <h4>Chí Vỹ</h4>
                                 <p>F&B - 1.5 năm</p>
                             </div>
                         </div>
@@ -343,9 +343,10 @@
                 </div>
                 <div class="footer-section">
                     <h3>Theo Dõi</h3>
-                    <a href="https://bitly.li/bIdA"><i class="fab fa-facebook"></i> Facebook</a>
-                    <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
+                    a href="https://bitly.li/bIdA"><i class="fab fa-facebook"></i> Facebook</a>
+                    <a href="https://www.instagram.com/nhienviettravel/?igsh=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"><i class="fab fa-instagram"></i> Instagram</a>
                     <a href="#"><i class="fab fa-youtube"></i> YouTube</a>
+                    <a href="https://www.tiktok.com/@nhienviettravel?_t=ZS-8yruzu7TUO2&_r=1"><i class="fab fa-tiktok"></i> Tiktok</a>
                 </div>
             </div>
             <div class="footer-bottom">
