--- a/contact.html
+++ b/contact.html
@@ -243,14 +243,14 @@
                     <a href="https://bitly.li/bIdA" style="display: inline-block; padding: 1rem 2rem; background: #1877f2; color: white; text-decoration: none; border-radius: 10px; transition: var(--transition);">
                         <i class="fab fa-facebook" style="margin-right: 0.5rem;"></i>Facebook
                     </a>
-                    <a href="#" style="display: inline-block; padding: 1rem 2rem; background: #e4405f; color: white; text-decoration: none; border-radius: 10px; transition: var(--transition);">
+                    <a href="https://www.instagram.com/nhienviettravel/?igsh=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" style="display: inline-block; padding: 1rem 2rem; background: #e4405f; color: white; text-decoration: none; border-radius: 10px; transition: var(--transition);">
                         <i class="fab fa-instagram" style="margin-right: 0.5rem;"></i>Instagram
                     </a>
                     <a href="#" style="display: inline-block; padding: 1rem 2rem; background: #ff0000; color: white; text-decoration: none; border-radius: 10px; transition: var(--transition);">
                         <i class="fab fa-youtube" style="margin-right: 0.5rem;"></i>YouTube
                     </a>
-                    <a href="#" style="display: inline-block; padding: 1rem 2rem; background: #25d366; color: white; text-decoration: none; border-radius: 10px; transition: var(--transition);">
-                        <i class="fab fa-whatsapp" style="margin-right: 0.5rem;"></i>WhatsApp
+                    <a href="https://www.tiktok.com/@nhienviettravel?_t=ZS-8yruzu7TUO2&_r=1" style="display: inline-block; padding: 1rem 2rem; background: #000000; color: white; text-decoration: none; border-radius: 10px; transition: var(--transition);">
+                        <i class="fab fa-tiktok" style="margin-right: 0.5rem;"></i>Tiktok
                     </a>
                 </div>
             </div>
@@ -282,9 +282,10 @@
                 </div>
                 <div class="footer-section">
                     <h3>Theo Dõi</h3>
-                    <a href="https://www.facebook.com/tourvemaybaypassport"><i class="fab fa-facebook"></i> Facebook</a>
-                    <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
+                    <a href="https://bitly.li/bIdA"><i class="fab fa-facebook"></i> Facebook</a>
+                    <a href="https://www.instagram.com/nhienviettravel/?igsh=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"><i class="fab fa-instagram"></i> Instagram</a>
                     <a href="#"><i class="fab fa-youtube"></i> YouTube</a>
+                    <a href="https://www.tiktok.com/@nhienviettravel?_t=ZS-8yruzu7TUO2&_r=1"><i class="fab fa-tiktok"></i> Tiktok</a>
                 </div>
             </div>
             <div class="footer-bottom">
