--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <li><a href="services.html">Dịch vụ</a></li>
                     <li><a href="careers.html">Tuyển dụng</a></li>
                     <li><a href="contact.html">Liên hệ</a></li>
+                    <li><a href="index.html">Nhiên Việt Inspired</a></li>
                 </ul>
             </nav>
             <button class="mobile-menu-btn">
@@ -289,8 +290,9 @@
                 <div class="footer-section">
                     <h3>Theo Dõi</h3>
                     <a href="https://bitly.li/bIdA"><i class="fab fa-facebook"></i> Facebook</a>
-                    <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
+                    <a href="https://www.instagram.com/nhienviettravel/?igsh=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"><i class="fab fa-instagram"></i> Instagram</a>
                     <a href="#"><i class="fab fa-youtube"></i> YouTube</a>
+                    <a href="https://www.tiktok.com/@nhienviettravel?_t=ZS-8yruzu7TUO2&_r=1"><i class="fab fa-tiktok"></i> Tiktok</a>
                 </div>
             </div>
             <div class="footer-bottom">
